@@ -110,6 +110,7 @@ AuthLDAP	bdpf	LDAP authentication module		CDONLEY
 AuthNIS		bdpf	NIS authentication and authorization	DOUGM
 AuthenRaduis	bdpf	Authentication via a Radius server	DANIEL
 AuthenSmb	bdpf	Authenticate against NT server		PARKER
+AuthenURL	bdpf	Authenticate via another URL		JGROENVEL
 BasicCookieAuth	cdpf	Accept cookie or basic auth creds	PMKANE
 DBILogin	bdpf	Authenticate to backend database 	JGROENVEL
 DCELogin	bdpf	Obtain a DCE login context		DOUGM
@@ -142,6 +143,7 @@ ProxyCache	i	Caching proxy				DOUGM
 * PerlFixupHandler's
 HttpEquiv	bdpf	HTML HTTP-EQUIV tags to HTTP headers	ROBH
 Timeit		bmpf	Benchmark PerlHandlers			APML
+Usertrack	bdpf	Perl version of mod_usertrack		ABH
 
 * PerlLogHandler's
 DBILogConfig	bdpf	Custom format logging via DBI		JBODNAR
