@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+added $r->internal_redirect method
+
 Apache::TieHashTable class enhancements:
 
  -get() in list context will return all values found for the given key
